Prevents embedded video from automatically going fullscreen on ios-safari - Adds breakpoint to articleImgRight to make it a standard block element at lower resolutions

--- a/site/pages/our-work/case-study/fidelity/style.css
+++ b/site/pages/our-work/case-study/fidelity/style.css
@@ -46,8 +46,9 @@
 
 .articleImgRight {
   width: 240px;
-  float: right;
-  margin-left: 30px;
+  display:block;
+  float: none;
+  margin: 0 auto 30px;
 }
 
 .articleImgFullWidth {
@@ -87,6 +88,11 @@
     max-width: 640px;
     margin: 0 auto 70px;
     height: 360px;
+  }
+
+  .articleImgRight {
+    margin: 0 0 0 30px;
+    float: right;
   }
 }
 
